[package]
name = "abc022"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc022-a", problem = "https://atcoder.jp/contests/abc022/<FIXME: screen name of the problem>"}
b = { name = "abc022-b", problem = "https://atcoder.jp/contests/abc022/<FIXME: screen name of the problem>"}
c = { name = "abc022-c", problem = "https://atcoder.jp/contests/abc022/<FIXME: screen name of the problem>"}
d = { name = "abc022-d", problem = "https://atcoder.jp/contests/abc022/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc022-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc022-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc022-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc022-d"
path = "./src/bin/d.rs"
