[package]
name = "abc034"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc034-a", problem = "https://atcoder.jp/contests/abc034/<FIXME: screen name of the problem>"}
b = { name = "abc034-b", problem = "https://atcoder.jp/contests/abc034/<FIXME: screen name of the problem>"}
c = { name = "abc034-c", problem = "https://atcoder.jp/contests/abc034/<FIXME: screen name of the problem>"}
d = { name = "abc034-d", problem = "https://atcoder.jp/contests/abc034/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
itertools = "=0.9.0"
itertools-num = "=0.1.3"
num = "=0.2.1"
ordered-float = "=1.0.2"
proconio = { version = "=0.3.6", features = ["derive"] }
regex = "=1.3.6"
whiteread = "=0.5.0"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc034-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc034-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc034-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc034-d"
path = "./src/bin/d.rs"
