[package]
name = "abc045"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc045-a", problem = "https://atcoder.jp/contests/abc045/<FIXME: screen name of the problem>"}
b = { name = "abc045-b", problem = "https://atcoder.jp/contests/abc045/<FIXME: screen name of the problem>"}
c = { name = "abc045-c", problem = "https://atcoder.jp/contests/abc045/<FIXME: screen name of the problem>"}
d = { name = "abc045-d", problem = "https://atcoder.jp/contests/abc045/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc045-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc045-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc045-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc045-d"
path = "./src/bin/d.rs"
