[package]
name = "abc075"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
itertools = "=0.9.0"
itertools-num = "=0.1.3"
num = "=0.2.1"
ordered-float = "=1.0.2"
proconio = { version = "=0.3.6", features = ["derive"] }
regex = "=1.3.6"
whiteread = "=0.5.0"

[profile.release]
lto = true
panic = 'abort'
