[package]
name = "abc109"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc109-a", problem = "https://atcoder.jp/contests/abc109/<FIXME: screen name of the problem>"}
b = { name = "abc109-b", problem = "https://atcoder.jp/contests/abc109/<FIXME: screen name of the problem>"}
c = { name = "abc109-c", problem = "https://atcoder.jp/contests/abc109/<FIXME: screen name of the problem>"}
d = { name = "abc109-d", problem = "https://atcoder.jp/contests/abc109/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"
num = "=0.2.1"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc109-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc109-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc109-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc109-d"
path = "./src/bin/d.rs"
