[package]
name = "abc128"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc128-a", problem = "https://atcoder.jp/contests/abc128/<FIXME: screen name of the problem>"}
b = { name = "abc128-b", problem = "https://atcoder.jp/contests/abc128/<FIXME: screen name of the problem>"}
c = { name = "abc128-c", problem = "https://atcoder.jp/contests/abc128/<FIXME: screen name of the problem>"}
d = { name = "abc128-d", problem = "https://atcoder.jp/contests/abc128/<FIXME: screen name of the problem>"}
e = { name = "abc128-e", problem = "https://atcoder.jp/contests/abc128/<FIXME: screen name of the problem>"}
f = { name = "abc128-f", problem = "https://atcoder.jp/contests/abc128/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc128-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc128-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc128-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc128-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc128-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc128-f"
path = "./src/bin/f.rs"
