[package]
name = "abc158"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc158-a", problem = "https://atcoder.jp/contests/abc158/<FIXME: screen name of the problem>"}
b = { name = "abc158-b", problem = "https://atcoder.jp/contests/abc158/<FIXME: screen name of the problem>"}
c = { name = "abc158-c", problem = "https://atcoder.jp/contests/abc158/<FIXME: screen name of the problem>"}
d = { name = "abc158-d", problem = "https://atcoder.jp/contests/abc158/<FIXME: screen name of the problem>"}
e = { name = "abc158-e", problem = "https://atcoder.jp/contests/abc158/<FIXME: screen name of the problem>"}
f = { name = "abc158-f", problem = "https://atcoder.jp/contests/abc158/<FIXME: screen name of the problem>"}

# dependencies added to new project
# alga = "=0.9.3"
# ascii = "=1.0.0"
# bitset-fixed = "=0.1.0"
# either = "=1.5.3"
# fixedbitset = "=0.2.0"
# getrandom = "=0.1.14"
# im-rc = "=14.3.0"
# indexmap = "=1.3.2"
# lazy_static = "=1.4.0"
# libm = "=0.2.1"
# maplit = "=1.0.2"
# nalgebra = "=0.20.0"
# ndarray = "=0.13.0"
# permutohedron = "=0.2.4"
# petgraph = "=0.5.0"
# rand = { version = "=0.7.3", features = ["small_rng"] }
# rustc-hash = "=1.1.0"
# smallvec = "=1.2.0"
# superslice = "=1.0.0"
# text_io = "=0.1.8"
[dependencies]
itertools = "=0.9.0"
itertools-num = "=0.1.3"
num = "=0.2.1"
ordered-float = "=1.0.2"
proconio = { version = "=0.3.6", features = ["derive"] }
regex = "=1.3.6"
whiteread = "=0.5.0"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc158-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc158-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc158-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc158-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc158-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc158-f"
path = "./src/bin/f.rs"
