[package]
name = "abc164"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc164-a", problem = "https://atcoder.jp/contests/abc164/<FIXME: screen name of the problem>"}
b = { name = "abc164-b", problem = "https://atcoder.jp/contests/abc164/<FIXME: screen name of the problem>"}
c = { name = "abc164-c", problem = "https://atcoder.jp/contests/abc164/<FIXME: screen name of the problem>"}
d = { name = "abc164-d", problem = "https://atcoder.jp/contests/abc164/<FIXME: screen name of the problem>"}
e = { name = "abc164-e", problem = "https://atcoder.jp/contests/abc164/<FIXME: screen name of the problem>"}
f = { name = "abc164-f", problem = "https://atcoder.jp/contests/abc164/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
# alga = "=0.9.3"
# ascii = "=1.0.0"
# bitset-fixed = "=0.1.0"
# either = "=1.5.3"
# fixedbitset = "=0.2.0"
# getrandom = "=0.1.14"
# im-rc = "=14.3.0"
# indexmap = "=1.3.2"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
# lazy_static = "=1.4.0"
# libm = "=0.2.1"
# maplit = "=1.0.2"
# nalgebra = "=0.20.0"
# ndarray = "=0.13.0"
num = "=0.2.1"
ordered-float = "=1.0.2"
# permutohedron = "=0.2.4"
# petgraph = "=0.5.0"
proconio = { version = "=0.3.6", features = ["derive"] }
# rand = { version = "=0.7.3", features = ["small_rng"] }
regex = "=1.3.6"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc164-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc164-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc164-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc164-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc164-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc164-f"
path = "./src/bin/f.rs"
