[package]
name = "agc001"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "agc001-a", problem = "https://atcoder.jp/contests/agc001/<FIXME: screen name of the problem>"}
b = { name = "agc001-b", problem = "https://atcoder.jp/contests/agc001/<FIXME: screen name of the problem>"}
c = { name = "agc001-c", problem = "https://atcoder.jp/contests/agc001/<FIXME: screen name of the problem>"}
d = { name = "agc001-d", problem = "https://atcoder.jp/contests/agc001/<FIXME: screen name of the problem>"}
e = { name = "agc001-e", problem = "https://atcoder.jp/contests/agc001/<FIXME: screen name of the problem>"}
f = { name = "agc001-f", problem = "https://atcoder.jp/contests/agc001/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "agc001-a"
path = "./src/bin/a.rs"

[[bin]]
name = "agc001-b"
path = "./src/bin/b.rs"

[[bin]]
name = "agc001-c"
path = "./src/bin/c.rs"

[[bin]]
name = "agc001-d"
path = "./src/bin/d.rs"

[[bin]]
name = "agc001-e"
path = "./src/bin/e.rs"

[[bin]]
name = "agc001-f"
path = "./src/bin/f.rs"
