[package]
name = "agc002"
version = "0.1.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "agc002-a", problem = "https://atcoder.jp/contests/agc002/<FIXME: screen name of the problem>"}
b = { name = "agc002-b", problem = "https://atcoder.jp/contests/agc002/<FIXME: screen name of the problem>"}
c = { name = "agc002-c", problem = "https://atcoder.jp/contests/agc002/<FIXME: screen name of the problem>"}
d = { name = "agc002-d", problem = "https://atcoder.jp/contests/agc002/<FIXME: screen name of the problem>"}
e = { name = "agc002-e", problem = "https://atcoder.jp/contests/agc002/<FIXME: screen name of the problem>"}
f = { name = "agc002-f", problem = "https://atcoder.jp/contests/agc002/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "agc002-a"
path = "./src/bin/a.rs"

[[bin]]
name = "agc002-b"
path = "./src/bin/b.rs"

[[bin]]
name = "agc002-c"
path = "./src/bin/c.rs"

[[bin]]
name = "agc002-d"
path = "./src/bin/d.rs"

[[bin]]
name = "agc002-e"
path = "./src/bin/e.rs"

[[bin]]
name = "agc002-f"
path = "./src/bin/f.rs"
